# ditto-client

./: .gitignore  README.md
.github/workflows/: client-matrix.yml  codeql.yml  coverage-report.yml  protocol-parity.yml  release-dry-run.yml
contracts/: README.md  core-ops.contract.json  protocol-contract.snapshot.json  validate_contracts.py
ditto-go-client/: README.md  bincode.go  bincode_test.go  contract_runner_test.go  errors.go  go.mod  http_client.go  http_client_parity_test.go  http_client_tls_test.go  tcp_client.go  tcp_reconnect_test.go  tcp_watch_flow_test.go  types.go  validation.go  validation_pattern_test.go
ditto-java-client/: build.gradle.kts  settings.gradle.kts
ditto-nodejs-client/: README.md  package-lock.json  package.json  tsconfig.json
ditto-nodejs-client/src/: bincode.ts  http-client-base.ts  http-client.ts  index.ts  tcp-client.ts  types.ts
ditto-nodejs-client/tests/: bincode-error-codes.test.mjs  (+5 more)
ditto-python-client/: .coverage  pyproject.toml
ditto-python-client/src/ditto_client/: __init__.py  bincode.py  http_client.py  http_client_base.py  tcp_client.py  types.py  validation.py
ditto-python-client/src/ditto_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ditto-python-client/tests/: test_bincode.py  test_contract_runtime.py  test_error_code_policy.py  test_strict_validation.py  test_tcp_reconnect.py  test_tcp_watch_flow.py
docs/: client-developer-guide.md  client-release-guide.md
scripts/: check_sdk_protocol_parity.py  release-dry-run.sh  sync_protocol_snapshot.py  validate_protocol_snapshot.py
(+20 files in other folders)
