[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "ditto-client"
version = "0.1.0"
description = "Python client for the Ditto distributed cache"
requires-python = ">=3.11"
dependencies = []   # stdlib only – no external dependencies

[tool.setuptools.packages.find]
where = ["src"]
